# nbites

src/man/: CMakeLists.txt  Man.cpp  Man.h
src/man/behaviors/players/: WalkTestStates.py
src/man/dropin/: CMakeLists.txt  DropInModule.cpp  DropInModule.h
src/man/localization/: Particle.h  ParticleFilter.cpp  ParticleFilter.h
src/man/motion/: MotionModule.cpp
src/man/motion/bhwalk/: BHWalkProvider.cpp
src/man/support/: CameraCalibrate.cpp
src/share/messages/: MotionStatus.proto
